tests/paczka1/fuzzy1/47715831.err
Error in line 5: dTY A304 43,7
Error in line 33: M35JaW S856 77,8
